--- a/.github/workflows/test-linux-snapcraft-arm64.yml
+++ b/.github/workflows/test-linux-snapcraft-arm64.yml
@@ -128,7 +128,7 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          name: snap-arm64-artifact
+          name: linux-snap-arm64-artifact
           path: |
             ./*.snap
 
