--- a/.github/workflows/test-linux-snapcraft.yml
+++ b/.github/workflows/test-linux-snapcraft.yml
@@ -53,7 +53,7 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          name: snap-artifact
+          name: linux-snap-artifact
           path: |
             ./*.snap
 
