--- a/.github/workflows/test-macos-pkg-appstore.yml
+++ b/.github/workflows/test-macos-pkg-appstore.yml
@@ -112,16 +112,37 @@ jobs:
           THIRD_PARTY_MAC_DEVELOPER_INSTALLER_SIGNING_IDENTITY: ${{ secrets.THIRD_PARTY_MAC_DEVELOPER_INSTALLER_SIGNING_IDENTITY }}
         working-directory: build/macos/Build/Products/AppStore-Release
 
+      - name: Install yq
+        run: |
+          if ! command -v yq >/dev/null 2>&1; then
+            echo "yq not exists"
+            brew install yq
+          fi
+          yq --version
+
+      - name: Set version
+        id: version_step
+        run: |
+          VERSION=$(yq '.version' < pubspec.yaml)
+          echo "$VERSION"
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+
       # Package the build.
       - name: Copy build for pkg
-        run: ls -la *.pkg
+        run: |
+          echo "$VERSION"
+          ls -la *.pkg
+          mv PicGuard.pkg PicGuardAppStore_"$VERSION".pkg
+          ls -la *.pkg
         working-directory: build/macos/Build/Products/AppStore-Release
+        env:
+          VERSION: ${{ steps.version_step.outputs.version }}
 
       - uses: actions/upload-artifact@v4
         with:
-          name: pkg-appstore-artifact
+          name: macos-pkg-appstore-artifact
           path: |
-            ./build/macos/Build/Products/AppStore-Release/PicGuard.pkg
+            ./build/macos/Build/Products/AppStore-Release/*.pkg
 
       - name: Clean up
         if: ${{ always() }}
