--- a/.github/workflows/test-linux-snapcraft.yml
+++ b/.github/workflows/test-linux-snapcraft.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Build snap
         run: |
           # https://snapcraft.io/docs/flutter-applications
-          version=$(yq '.version' pubspec.yaml)
+          version=$(yq '.version' < pubspec.yaml)
           snapcraft --output "picguard_"$version"_linux_x86_64.snap"
 
       # Package the build.
