--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -996,7 +996,7 @@ jobs:
       - name: Copy build for zip
         run: |
           ls -la *.zip
-          mv *.zip $GITHUB_WORKSPACE/
+          mv picguard_*_macos_x86_64.zip $GITHUB_WORKSPACE/
         working-directory: build/macos/Build/Products/Release
 
       - name: Show gh info
@@ -1668,7 +1668,7 @@ jobs:
       - name: Crate msix
         run: |
           $RELEASE = $(If ($env:ENV -eq "staging") {"$env:VERSION_SUFFIX.pre"} Else {"$env:VERSION_SUFFIX"})
-          dart run msix:create --build-windows false "picguard_$RELEASE`_windows_x86_64.msix"
+          dart run msix:create --build-windows false --output-name "picguard_$RELEASE`_windows_x86_64"
         env:
           ENV: ${{ github.event.inputs.env }}
           VERSION_SUFFIX: "${{ needs.create_release.outputs.version }}+${{ needs.create_release.outputs.commit_count }}"
