--- a/.github/workflows/test-linux-flatpak-arm64.yml
+++ b/.github/workflows/test-linux-flatpak-arm64.yml
@@ -1,4 +1,4 @@
-name: Test Linux Flatpak
+name: Test Linux Flatpak (arm64)
 
 on:
   workflow_dispatch:
@@ -36,15 +36,24 @@ jobs:
           echo "$VERSION"
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
+      - name: Install QEMU deps
+        run: |
+          dnf -y install docker
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: arm64
+
       - name: Build .flatpak
         uses: flatpak/flatpak-github-actions/flatpak-builder@master
         with:
-          bundle: PicGuard_${{ steps.version_step.outputs.version }}_linux_x86_64.flatpak
+          bundle: PicGuard_${{ steps.version_step.outputs.version }}_linux_aarch64.flatpak
           manifest-path: flatpak/com.kjxbyz.PicGuard.json
-          cache: true
-          restore-cache: true
-          cache-key: flatpak-builder-${{ github.sha }}-cache-restored
-          arch: x86_64
+          cache: false
+          restore-cache: false
+          cache-key: flatpak-builder-${{ github.sha }}-no-cache-restored
+          arch: aarch64
           upload-artifact: false
 
       # Package the build.
@@ -54,7 +63,7 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          name: linux-flatpak-artifact
+          name: linux-flatpak-arm64-artifact
           path: |
             ./*.flatpak
 
