--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -258,9 +258,12 @@ jobs:
         run: |
           if ! command -v yq >/dev/null 2>&1; then
             echo "yq not exists"
-            sudo add-apt-repository ppa:rmescandon/yq
-            sudo apt update
-            sudo apt install -y yq
+            if ! command -v wget >/dev/null 2>&1; then
+              echo "wget not exists"
+              sudo apt install -y wget
+            fi
+            wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/bin/yq &&\
+            chmod +x /usr/bin/yq
           fi
           yq --version
 
