--- a/.github/workflows/test-linux-arm64.yml
+++ b/.github/workflows/test-linux-arm64.yml
@@ -449,7 +449,7 @@ jobs:
             
             # Get version
             echo "Get version"
-            version=$(yq '.version' < pubspec.yaml)
+            version=$(yq '.version' pubspec.yaml)
 
             # Build tar
             echo "Build tar"
