--- a/.github/workflows/test-linux-flatpak.yml
+++ b/.github/workflows/test-linux-flatpak.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Set version
         id: version_step
         run: |
-          VERSION=$(yq '.version' < pubspec.yaml)
+          VERSION=$(yq '.version' pubspec.yaml)
           echo "$VERSION"
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
