--- a/.github/workflows/test-macos-pkg-appstore.yml
+++ b/.github/workflows/test-macos-pkg-appstore.yml
@@ -123,7 +123,7 @@ jobs:
       - name: Set version
         id: version_step
         run: |
-          VERSION=$(yq '.version' < pubspec.yaml)
+          VERSION=$(yq '.version' pubspec.yaml)
           echo "$VERSION"
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
