--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -907,7 +907,11 @@ jobs:
           ENV_PROD_BASE64: ${{ secrets.ENV_PROD_BASE64 }}
 
       - name: Install p7zip
-        run: brew install p7zip
+        run: |
+          if ! command -v 7z >/dev/null 2>&1; then
+            echo "7z not exists"
+            brew install p7zip
+          fi
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -1027,9 +1031,6 @@ jobs:
       - create_release
     steps:
       - uses: actions/checkout@v4
-
-      - name: Install p7zip
-        run: brew install p7zip
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
