--- a/.github/workflows/test-macos-zip.yml
+++ b/.github/workflows/test-macos-zip.yml
@@ -14,7 +14,11 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install p7zip
-        run: brew install p7zip
+        run: |
+          if ! command -v 7z >/dev/null 2>&1; then
+            echo "7z not exists"
+            brew install p7zip
+          fi
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
