--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1606,7 +1606,6 @@ jobs:
           TAG_NAME: "v${{ needs.create_release.outputs.version }}"
           GH_TOKEN: ${{ secrets.PG_RELEASE_TOKEN }}
 
-
   linux_snap:
     name: Create snap
     runs-on: ubuntu-latest
@@ -1727,15 +1726,36 @@ jobs:
       - name: Flutter doctor -v
         run: flutter doctor -v
 
-      - name: Install certificates
+      - name: Install yq
+        shell: pwsh
+        run: |
+          choco install yq
+          yq --version
+
+      - name: Update config
+        shell: pwsh
         run: |
           echo $env:RUNNER_TEMP
-          $certificate_path = "$env:RUNNER_TEMP\picguard.pfx"
+          $certificatePath = "$env:RUNNER_TEMP\picguard.pfx"
           # https://stackoverflow.com/questions/15414678/how-to-decode-a-base64-string
           # https://stackoverflow.com/questions/66239147/pfx-encoded-and-back-to-pfx-in-powershell
           $bytes = echo $env:WINDOWS_CERTIFICATE | %{[Convert]::FromBase64String($_)}
-          [IO.File]::WriteAllBytes("$certificate_path", $bytes)
-          (get-content pubspec.yaml) -replace 'PUBLISHER_NAME_PLACEHOLDER', $env:WINDOWS_PUBLISHER_NAME -replace 'IDENTITY_NAME_PLACEHOLDER', $env:WINDOWS_IDENTITY_NAME -replace 'CERTIFICATE_PATH_PLACEHOLDER', $certificate_path -replace 'CERTIFICATE_PASSWORD_PLACEHOLDER', $env:WINDOWS_CERTIFICATE_PASSWORD -replace 'PUBLISHER_PLACEHOLDER', $env:WINDOWS_PUBLISHER | Out-File -encoding utf8 pubspec.yaml
+          [IO.File]::WriteAllBytes("$certificatePath", $bytes)
+
+          $yamlFile = ".\pubspec.yaml"
+          $yamlContent = Get-Content -Raw -Path $yamlFile
+
+          # 获取环境变量的值
+          $publisherName = (Get-Item -Path Env:WINDOWS_PUBLISHER_NAME).Value
+          $identityName = (Get-Item -Path Env:WINDOWS_IDENTITY_NAME).Value
+          $certificatePassword = (Get-Item -Path Env:WINDOWS_CERTIFICATE_PASSWORD).Value
+          $publisher = (Get-Item -Path Env:WINDOWS_PUBLISHER).Value
+
+          # 使用 yq 更新多个字段
+          $updatedYamlContent = echo $yamlContent | yq e ".msix_config.publisher_display_name = `"$publisherName`" | .msix_config.identity_name = `"$identityName`" | .msix_config.certificate_path = `"$certificatePath`" | .msix_config.certificate_password = `"$certificatePassword`" | .msix_config.publisher = `"$publisher`"" -
+
+          # 将更新后的内容写回文件
+          Set-Content -Path $yamlFile -Value $updatedYamlContent
         env:
           WINDOWS_PUBLISHER_NAME: ${{ secrets.WINDOWS_PUBLISHER_NAME }}
           WINDOWS_IDENTITY_NAME: ${{ secrets.WINDOWS_IDENTITY_NAME }}
@@ -1847,11 +1867,30 @@ jobs:
       - name: Install flutter dependencies
         run: flutter pub get
 
+      - name: Install yq
+        shell: pwsh
+        run: |
+          choco install yq
+          yq --version
+
       - name: Update config
+        shell: pwsh
         run: |
           $SETUP_ICON_FILE = "$pwd\windows\runner\resources\app_icon.ico"
           echo $SETUP_ICON_FILE
-          (get-content windows\packaging\exe\make_config.yaml) -replace 'APP_ID_PLACEHOLDER', $env:WINDOWS_APP_ID -replace 'PUBLISHER_NAME_PLACEHOLDER', $env:WINDOWS_PUBLISHER_NAME -replace 'SETUP_ICON_FILE_PLACEHOLDER', $SETUP_ICON_FILE | Out-File -encoding utf8 windows\packaging\exe\make_config.yaml
+
+          $yamlFile = ".\windows\packaging\exe\make_config.yaml"
+          $yamlContent = Get-Content -Raw -Path $yamlFile
+
+          # 获取环境变量的值
+          $appId = (Get-Item -Path Env:WINDOWS_APP_ID).Value
+          $publisherName = (Get-Item -Path Env:WINDOWS_PUBLISHER_NAME).Value
+
+          # 使用 yq 更新多个字段
+          $updatedYamlContent = echo $yamlContent | yq e ".app_id = `"$appId`" | .publisher_name = `"$publisherName`" | .setup_icon_file = `"$SETUP_ICON_FILE`"" -
+
+          # 将更新后的内容写回文件
+          Set-Content -Path $yamlFile -Value $updatedYamlContent
         env:
           WINDOWS_APP_ID: ${{ secrets.WINDOWS_APP_ID }}
           WINDOWS_PUBLISHER_NAME: ${{ secrets.WINDOWS_PUBLISHER_NAME }}
@@ -1868,13 +1907,13 @@ jobs:
       - name: Signing
         run: |
           echo $env:RUNNER_TEMP
-          $certificate_path = "$env:RUNNER_TEMP\picguard.pfx"
+          $certificatePath = "$env:RUNNER_TEMP\picguard.pfx"
           # https://stackoverflow.com/questions/15414678/how-to-decode-a-base64-string
           # https://stackoverflow.com/questions/66239147/pfx-encoded-and-back-to-pfx-in-powershell
           $bytes = echo $env:WINDOWS_CERTIFICATE | %{[Convert]::FromBase64String($_)}
-          [IO.File]::WriteAllBytes("$certificate_path", $bytes)
+          [IO.File]::WriteAllBytes("$certificatePath", $bytes)
           $signtool = "C:\Program Files (x86)\Microsoft SDKs\ClickOnce\SignTool\signtool.exe"
-          & $signtool sign /f "$certificate_path" /fd SHA256 /t http://timestamp.comodoca.com/authenticode /p "$env:WINDOWS_CERTIFICATE_PASSWORD" /n "$env:WINDOWS_PUBLISHER_NAME" (get-item ".\**\*.exe")
+          & $signtool sign /f "$certificatePath" /fd SHA256 /t http://timestamp.comodoca.com/authenticode /p "$env:WINDOWS_CERTIFICATE_PASSWORD" /n "$env:WINDOWS_PUBLISHER_NAME" (get-item ".\**\*.exe")
         env:
           WINDOWS_CERTIFICATE: ${{ secrets.WINDOWS_CERTIFICATE }}
           WINDOWS_CERTIFICATE_PASSWORD: ${{ secrets.WINDOWS_CERTIFICATE_PASSWORD }}
