--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -709,8 +709,7 @@ jobs:
           rm -f PicGuard-unsigned.pkg
           ls -la *.pkg
           RELEASE="$([[ "$ENV" == "staging" ]] && echo "$VERSION.pre" || echo "$VERSION")"
-          mv PicGuard.pkg PicGuard_"$RELEASE".pkg
-          cp *.pkg $GITHUB_WORKSPACE/
+          mv PicGuard.pkg $GITHUB_WORKSPACE/PicGuard_"$RELEASE".pkg
         working-directory: build/macos/Build/Products/Release
         env:
           ENV: ${{ github.event.inputs.env }}
@@ -990,7 +989,7 @@ jobs:
       - name: Build zip
         run: |
           RELEASE="$([[ "$ENV" == "staging" ]] && echo "$VERSION.pre" || echo "$VERSION")"
-          7z a picguard_"$RELEASE"_macos_x86_64.zip ./PicGuard.app
+          7z a PicGuard_"$RELEASE"_macos_x86_64.zip ./PicGuard.app
         working-directory: build/macos/Build/Products/Release
         env:
           ENV: ${{ github.event.inputs.env }}
@@ -1000,7 +999,7 @@ jobs:
       - name: Copy build for zip
         run: |
           ls -la *.zip
-          mv picguard_*_macos_x86_64.zip $GITHUB_WORKSPACE/
+          mv PicGuard_*_macos_x86_64.zip $GITHUB_WORKSPACE/
         working-directory: build/macos/Build/Products/Release
 
       - name: Show gh info
@@ -1121,10 +1120,10 @@ jobs:
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
           KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
 
-      - name: Build zip
+      - name: Build tar
         run: |
           RELEASE="$([[ "$ENV" == "staging" ]] && echo "$VERSION.pre" || echo "$VERSION")"
-          tar -czaf picguard_"$RELEASE"_macos_x86_64.tar.gz ./PicGuard.app
+          tar -czaf PicGuard_"$RELEASE"_macos_x86_64.tar.gz ./PicGuard.app
         working-directory: build/macos/Build/Products/Release
         env:
           ENV: ${{ github.event.inputs.env }}
@@ -1502,7 +1501,7 @@ jobs:
           VERSION: ${{ needs.create_release.outputs.version }}
 
       # Package the build.
-      - name: Copy build for zip
+      - name: Copy build for tar
         run: ls -la
 
       - name: Show gh info
@@ -1659,7 +1658,8 @@ jobs:
 
       - name: Update snapcraft.yaml
         run: |
-          yq -i '.version = strenv(VERSION)' snap/snapcraft.yaml
+          rm -f snap/snapcraft-arm64.yaml
+          VERSION=$VERSION yq -i '.version = strenv(VERSION)' snap/snapcraft.yaml
           yq -i '.parts.picguard.build-environment[1].FLUTTER_VERSION = "3.19.6"' snap/snapcraft.yaml
         env:
           VERSION: ${{ needs.create_release.outputs.version }}
@@ -1768,7 +1768,7 @@ jobs:
         env:
           COMMIT_COUNT: ${{ needs.create_release.outputs.commit_count }}
 
-      - name: Crate msix
+      - name: Create msix
         run: |
           $RELEASE = $(If ($env:ENV -eq "staging") {"$env:VERSION.pre"} Else {"$env:VERSION"})
           dart run msix:create --build-windows false --output-name "picguard_$RELEASE`_windows_x86_64"
