--- a/.github/workflows/test-macos-dmg.yml
+++ b/.github/workflows/test-macos-dmg.yml
@@ -123,7 +123,7 @@ jobs:
           bash build-dmg.sh
 
       # Package the build.
-      - name: Copy build for snap
+      - name: Copy build for dmg
         run: |
           VERSION=$(yq '.version' pubspec.yaml)
           echo "$VERSION"
