--- a/.github/workflows/test-linux-arm64.yml
+++ b/.github/workflows/test-linux-arm64.yml
@@ -45,8 +45,8 @@ jobs:
             echo "Install dependencies for Linux"
             sudo apt update
             sudo apt install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
-            sudo apt install locate libfuse2
-            wget -O appimagetool "https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-armhf.AppImage"
+            sudo apt install -y locate libfuse2
+            wget -O appimagetool "https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-aarch64.AppImage"
             chmod +x appimagetool && mv appimagetool /usr/local/bin/
             
             # Setup Flutter
