fix: rpm builds on Linux arm64
[skip ci]

--- a/.github/workflows/test-linux-arm64.yml
+++ b/.github/workflows/test-linux-arm64.yml
@@ -248,12 +248,16 @@ jobs:
             # Install flutter dependencies
             echo "Install flutter dependencies"
             flutter pub get
-            
+
+            # Install yq
             if ! command -v yq >/dev/null 2>&1; then
               echo "yq not exists"
-              sudo add-apt-repository ppa:rmescandon/yq
-              sudo apt update
-              sudo apt install -y yq
+              if ! command -v wget >/dev/null 2>&1; then
+                echo "wget not exists"
+                sudo apt install -y wget
+              fi
+              wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_arm64 -O /usr/bin/yq &&\
+              chmod +x /usr/bin/yq
             fi
             yq --version
             
